--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -140,7 +140,7 @@ tags:
     <!-- Give somewhere for jQuery.validate to put errors for now... -->
     <span class="hidden" id="errors"></span>
     <div id="transaction-who-block" style="display:none;">
-      <form class="form" role="form" id="who-form" method="post">
+      <form class="form" role="form" name="whoForm" id="who-form" ng-submit="submitForm(userForm.$valid)" novalidate>
         <fieldset>
           <legend>Billing Information</legend>
           <div class="row text-left">
@@ -162,7 +162,7 @@ tags:
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-addr1">Address Line 1</label>
                 <input class="form-control" id="billing-addr1" type="text"
-                ng-model="client.customeraddress1" name="customeraddress1" pattern="^\d+ .*$" required>
+                ng-model="client.customeraddress1" name="customeraddress1" ng-pattern="^\d+ .*$" required>
                 <span id="billing-addr1_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
@@ -186,22 +186,21 @@ tags:
               <div class="form-group">
                 <label class="control-label" for="billing-zip">Zip Code</label>
                 <input class="form-control" id="billing-zip" type="text" ng-model="client.customerzip" name="customerzip"
-                pattern="^[0-9]{5}(?:-[0-9]{4}){0,1}$" required>
+                ng-pattern="^[0-9]{5}(?:-[0-9]{4}){0,1}$" required>
                 <span id="billing-zip_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-email">Email Address</label>
-                <input class="form-control" id="billing-email" type="text"
-                ng-model="client.customeremail" name="customeremail" required>
+                <input class="form-control" id="billing-email" type="email" ng-model="client.customeremail" name="customeremail" required>
                 <span id="billing-email_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-phone">Phone Number</label>
-                <input class="form-control" id="billing-phone" type="text" ng-model="client.customerphone" name="customerphone" maxlength="14">
+                <input class="form-control" id="billing-phone" type="text" ng-model="client.customerphone" name="customerphone" ng-maxlength="14">
                 <span id="billing-phone_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
