--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -206,7 +206,7 @@ tags:
             </div>
           </div>
           <div class="row">
-            <button class="btn btn-default" type="submit" style="width: 90%; align-content: center;">Next</button>
+            <button class="btn btn-default" type="submit" style="width: 90%; align-content: center;" ng-disabled="whoForm.$invalid">Next</button>
           </div>
         </fieldset>
       </form>
