--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -12,7 +12,7 @@ tags:
   need.</p>
 
   <hr class="half-rule">
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
 <script type="text/javascript" src="/static/scripts/errorcodes.json" defer></script>
 <script type="text/javascript" src="/static/scripts/donation-app.js" defer></script>
 
