--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -147,14 +147,14 @@ tags:
             <div class="col-sm-6">
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-first">First Name</label>
-                <input class="form-control" id="billing-first" type="text" ng-model="first" name="first" required>
+                <input class="form-control" id="billing-first" type="text" ng-model="client.first" name="first" required>
                 <span id="billing-first_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-last">Last Name</label>
-                <input class="form-control" id="billing-last" type="text" ng-model="last" name="last" required>
+                <input class="form-control" id="billing-last" type="text" ng-model="client.last" name="last" required>
                 <span id="billing-last_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
