--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -200,7 +200,7 @@ tags:
             <div class="col-sm-6">
               <div class="form-group has-feedback">
                 <label class="control-label" for="billing-phone">Phone Number</label>
-                <input class="form-control" id="billing-phone" type="text" ng-model="client.customerphone" name="customerphone" ng-maxlength="14">
+                <input class="form-control" id="billing-phone" type="tel" ng-model="client.customerphone" name="customerphone" ng-maxlength="14">
                 <span id="billing-phone_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
@@ -248,13 +248,13 @@ tags:
     </div>
 
     <div id="transaction-CC-block" style="display: none;">
-      <form class="CC form vanco_nvp" role="form" id="CC-form" method="get">
+      <form class="CC form vanco_nvp" role="form" id="CC-form" method="get" name="ccForm" ng-submit="paymentSubmit('cc')" novalidate>
         <fieldset>
           <div class="row text-left">
             <div class="col-sm-offset-4 col-xs-12 col-sm-4">
               <div class="form-group has-feedback">
                 <label class="control-label" for="acctnumber">Credit Card Number</label>
-                <input class="form-control" id="acctnumber" name="accountnumber" type="text" size="16" x-autocompletetype="cc-number" ng-pattern="/^[0-9]{15,16}$/" required>
+                <input class="form-control" id="acctnumber" ng-model="payment.accountnumber" name="accountnumber" type="text" size="16" x-autocompletetype="cc-number" ng-pattern="/^[0-9]{15,16}$/" required>
                 <span id="acctnumber_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
@@ -263,7 +263,7 @@ tags:
             </div>
             <div class="col-sm-offset-4 col-xs-12 col-sm-2">
               <div class="form-group has-feedback">
-                <input class="form-control" type="text" id="cvv" name="cvvcode" pattern="/^[0-9]{3,4}$/" required>
+                <input class="form-control" type="number" id="cvv" ng-model="payment.cvvcode" name="cvvcode" ng-pattern="/^[0-9]{3,4}$/" required>
                 <span id="cvv_glyph" class="glyphicon form-control-feedback"></span>
               </div>
             </div>
@@ -271,7 +271,7 @@ tags:
             <div class="col-xs-offset-4 col-xs-8"><label>Expiration Date</label></div>
             <div class="col-sm-offset-4 col-xs-6 col-sm-2">
               <div class="form-group">
-                <select class="form-control" id="expmth" name="expmonth" required>
+                <select class="form-control" id="expmth" name="expmonth" ng-model="payment.expmonth" required>
                   <option value="">Month</option>
                   <% for month in (1..12) %>
                   <option value="<%= month %>"> <%= month %> </option>
@@ -281,7 +281,7 @@ tags:
             </div>
             <div class="col-xs-6 col-sm-2">
               <div class="form-group">
-                <select class="form-control" id="expyr" name="expyear" required>
+                <select class="form-control" id="expyr" name="expyear" ng-model="payment.expyear" required>
                   <option value="">Year</option>
                   <% for year in (Time.new.year..(Time.new.year + 5)) %>
                   <option value="<%= year.to_s[2..3] %>"> <%= year %> </option>
