--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -292,7 +292,7 @@ tags:
           </div>
           <span id="fields"></span>
           <input type="hidden" name="accounttype" value="CC">
-          <button class="amount btn btn-default" type="submit" id="submitCC"></button>
+          <button class="amount btn btn-default" type="submit" id="submitCC" ng-disabled="ccForm.$invalid"></button>
         </fieldset>
       </form>
     </div>
