--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -248,7 +248,7 @@ tags:
     </div>
 
     <div id="transaction-CC-block" style="display: none;">
-      <form class="CC form vanco_nvp" role="form" id="CC-form" method="get" name="ccForm" ng-submit="paymentSubmit('cc')" novalidate>
+      <form class="CC form vanco_nvp" role="form" id="CC-form" method="get" name="ccForm" ng-submit="paymentFormSubmit('cc',ccForm.$valid)" novalidate>
         <fieldset>
           <div class="row text-left">
             <div class="col-sm-offset-4 col-xs-12 col-sm-4">
