--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -65,13 +65,13 @@ tags:
     </div>
 
     <div id="transaction-amount-block">
-      <form class="form" role="form" id="amount-form" method="post">
+      <form class="form" role="form" id="amount-form" method="post" name="amountForm" ng-submit="amountFormSubmit(amountForm.$valid)">
         <fieldset>
           <h3>Tell us how to use your donation (choose one)</h3>
           <div class="row text-left">
             <label class="col-md-4">
               <h4>
-                <input type="radio" value='0001' name="fundid" checked>
+                <input type="radio" value='0001' name="fundid" ng-model="client.fundid" checked>
                 Operations Support
               </h4>
               <p>
@@ -81,7 +81,7 @@ tags:
             </label>
             <label class="col-md-4">
               <h4>
-                <input type="radio" value='0002' name="fundid" autocomplete="off">
+                <input type="radio" value='0002' name="fundid" ng-model="client.fundid" autocomplete="off">
                 Patient Care
               </h4>
               <p>
@@ -91,7 +91,7 @@ tags:
             </label>
             <label class="col-md-4">
               <h4>
-                <input type="radio" value='0003' name="fundid" autocomplete="off">
+                <input type="radio" value='0003' name="fundid" ng-model="client.fundid" autocomplete="off">
                 Endowment
               </h4>
               <p>
