--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -71,7 +71,7 @@ tags:
           <div class="row text-left">
             <label class="col-md-4">
               <h4>
-                <input type="radio" value='0001' name="fundid" ng-model="client.fundid" checked>
+                <input type="radio" value='0001' name="fundid" ng-model="client.fundid" checked required>
                 Operations Support
               </h4>
               <p>
@@ -124,7 +124,7 @@ tags:
               $1,000
             </button>
             <div class="col-md-3 input-group">
-              <input class="form-control input-lg" type="number" pattern="[0-9]*" name="enteredAmount" id="enteredAmount" placeholder="Other" ng-model="vanco.amount">
+              <input class="form-control input-lg" type="number" pattern="[0-9]*" name="enteredAmount" id="enteredAmount" placeholder="Other" ng-model="vanco.amount" requird>
               <span class="input-group-btn">
                 <button class="btn btn-default btn-lg" type="submit" id="customAmt" ng-disabled="amountForm.$invalid">Go</button>
               </span>
