--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -290,7 +290,7 @@ tags:
           </div>
           <span id="fields"></span>
           <input type="hidden" name="accounttype" value="CC">
-          <button class="amount btn btn-default" type="submit" id="submitCC" ng-disabled="ccForm.$invalid"></button>
+          <button class="amount btn btn-default" type="submit" id="submitCC" ng-disabled="ccForm.$invalid">{{vanco.amount}}</button>
         </fieldset>
       </form>
     </div>
@@ -319,7 +319,7 @@ tags:
             </div>
           </div>
           <input type="hidden" name="accounttype" value="C">
-          <button class="amount btn btn-default" type="submit" id="submitC"></button>
+          <button class="amount btn btn-default" type="submit" id="submitC">{{vanco.amount}}</button>
         </fieldset>
       </form>
     </div>
@@ -346,7 +346,7 @@ tags:
             </div>
           </div>
           <input type="hidden" name="accounttype" value="S">
-          <button class="amount btn btn-default" type="submit" id="submitS"></button>
+          <button class="amount btn btn-default" type="submit" id="submitS">{{vanco.amount}}</button>
         </fieldset>
       </form>
     </div>
