--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -124,7 +124,7 @@ tags:
               $1,000
             </button>
             <div class="col-md-3 input-group">
-              <input class="form-control input-lg" type="number" pattern="[0-9]*" name="enteredAmount" id="enteredAmount" placeholder="Other" ng-model="vanco.amount" requird>
+              <input class="form-control input-lg" type="number" pattern="[0-9]*" name="enteredAmount" id="enteredAmount" placeholder="Other" ng-model="vanco.amount" required>
               <span class="input-group-btn">
                 <button class="btn btn-default btn-lg" type="submit" id="customAmt" ng-disabled="amountForm.$invalid">Go</button>
               </span>
