--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -245,7 +245,7 @@ tags:
       <div class="full-rule"></div>
     </div>
 
-    <div id="transaction-CC-block" style="display: none;" ng-show="vanco.accounttype == 'CC'">
+    <div id="transaction-CC-block" ng-show="vanco.accounttype == 'CC'">
       <form class="CC form vanco_nvp" role="form" id="CC-form" method="get" name="ccForm" ng-submit="paymentFormSubmit('cc',ccForm.$valid)" novalidate>
         <fieldset>
           <div class="row text-left">
