--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -42,22 +42,22 @@ tags:
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
     <div class="row" id="status-bar">
       <div class="col-xs-1 col-xs-offset-1 click">
-        <div id="tx-one" class="active stage">
+        <div id="tx-one" class="stage" ng-class="active: breadcrumb==1;">
           1
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2 click">
-        <div id="tx-two" class="stage">
+        <div id="tx-two" class="stage"  ng-class="active: breadcrumb==1;">
           2
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2 click">
-        <div id="tx-three" class="stage">
+        <div id="tx-three" class="stage" ng-class="active: breadcrumb==1;">
           3
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
-        <div id="tx-four" class="stage">
+        <div id="tx-four" class="stage" ng-class="active: breadcrumb==1;">
           4
         </div>
       </div>
