--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -61,7 +61,7 @@ tags:
           4
         </div>
       </div>
-      <div class="col-xs-12 amount">{{vanco.amount}} {{vanco.accounttype}}</div>
+      <div class="col-xs-12 amount">{{vanco.amount}} {{breadcrumb}}</div>
     </div>
 
     <div id="transaction-amount-block">
