--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -42,17 +42,17 @@ tags:
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
     <div class="row" id="status-bar">
       <div class="col-xs-1 col-xs-offset-1 click">
-        <div id="tx-one" class="stage" ng-class="{active: breadcrumb==1;}">
+        <div id="tx-one" class="stage" ng-class="{active: $breadcrumb==1;}">
           1
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2 click">
-        <div id="tx-two" class="stage"  ng-class="{active: breadcrumb==2;}">
+        <div id="tx-two" class="stage"  ng-class="{active: $breadcrumb==2;}">
           2
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2 click">
-        <div id="tx-three" class="stage" ng-class="{active: breadcrumb==3;}">
+        <div id="tx-three" class="stage" ng-class="{active: $breadcrumb==3;}">
           3
         </div>
       </div>
