--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -42,7 +42,7 @@ tags:
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
     <div class="row" id="status-bar">
       <div class="col-xs-1 col-xs-offset-1 click">
-        <div id="tx-one" class="stage" ng-class="{'active': breadcrumb == '1';}">
+        <div id="tx-one" class="stage" ng-class="{'active': breadcrumb == '1'}">
           1
         </div>
       </div>
