--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -47,17 +47,17 @@ tags:
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2 click">
-        <div id="tx-two" class="stage"  ng-class="{active: $breadcrumb==2;}">
+        <div id="tx-two" class="stage"  ng-class="{active: breadcrumb == 2;}">
           2
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2 click">
-        <div id="tx-three" class="stage" ng-class="{active: $breadcrumb==3;}">
+        <div id="tx-three" class="stage" ng-class="{active: breadcrumb == 3;}">
           3
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
-        <div id="tx-four" class="stage" ng-class="active: breadcrumb==4;">
+        <div id="tx-four" class="stage" ng-class="active: breadcrumb == 4;">
           4
         </div>
       </div>
