--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -42,7 +42,7 @@ tags:
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
     <div class="row" id="status-bar">
       <div class="col-xs-1 col-xs-offset-1 click">
-        <div id="tx-one" class="stage" ng-class="{'active': breadcrumb == '1'}">
+        <div id="tx-one" class="stage" ng-class="{active: breadcrumb == 1}">
           1
         </div>
       </div>
@@ -52,16 +52,16 @@ tags:
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2 click">
-        <div id="tx-three" class="stage" ng-class="{active: breadcrumb == 3;}">
+        <div id="tx-three" class="stage" ng-class="{active: breadcrumb == 3}">
           3
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
-        <div id="tx-four" class="stage" ng-class="active: breadcrumb == 4;">
+        <div id="tx-four" class="stage" ng-class="active: breadcrumb == 4">
           4
         </div>
       </div>
-      <div class="col-xs-12 amount">{{vanco.amount}} {{breadcrumb}}</div>
+      <div class="col-xs-12 amount">{{vanco.amount}}</div>
     </div>
 
     <div id="transaction-amount-block">
