--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -57,7 +57,7 @@ tags:
         </div>
       </div>
       <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
-        <div id="tx-four" class="stage" ng-class="active: breadcrumb == 4">
+        <div id="tx-four" class="stage" ng-class="{active: breadcrumb == 4}">
           4
         </div>
       </div>
