--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -29,14 +29,14 @@ tags:
   </div>
 </div>
 
-<div class="row text-left hidden" id="failedToLoad" ng-show="!vancoReachable">
+<div class="row text-left" id="failedToLoad" ng-show="!vancoReachable">
   <div class="col-sm-8 col-sm-offset-1">
       <iframe seamless width="1000" height="900" src="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0="></iframe>
   </div>
 </div>
 
-<div class="hidden donate row text-center" id="donationApp" ng-show="vancoReachable">
-  <div class="hidden col-md-8 col-md-offset-2 alert alert-danger" id="dev-warning" role="alert">
+<div class="donate row text-center" id="donationApp" ng-show="vancoReachable">
+  <div class="col-md-8 col-md-offset-2 alert alert-danger" id="dev-warning" role="alert">
     In Development Environment -- Use only test values, you been warned.
   </div>
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
