--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -36,7 +36,7 @@ tags:
 </div>
 
 <div class="donate row text-center" id="donationApp" ng-show="vancoReachable">
-  <div class="col-md-8 col-md-offset-2 alert alert-danger" id="dev-warning" role="alert">
+  <div class="col-md-8 col-md-offset-2 alert alert-danger" id="dev-warning" role="alert" ng-show="devMode">
     In Development Environment -- Use only test values, you been warned.
   </div>
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
