--- a/content/get_involved/donationsII.html
+++ b/content/get_involved/donationsII.html
@@ -23,7 +23,7 @@ tags:
 <div class="row text-center" id="loading_init" ng-show="loading">
   <div class="col-sm-6 col-sm-offset-3">
     <div class="alert alert-info" role="alert">
-      <p>Loading donation form L:{{loading}} V:{{vancoReachable}}</p>
+      <p>Loading donation form L:{{loading}} V:{{vancoReachable}} D:{{devMode}}</p>
       <p><img src="/static/imgs/ajax-loader.gif" alt="loading" width=10%> </p>
     </div>
   </div>
